--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -21,7 +21,7 @@
               <mat-card-title>{{ course.title }}</mat-card-title>
               <mat-card-subtitle>{{ course.description }}</mat-card-subtitle>
             <mat-card-actions class="card-actions-bottom">
-              <button mat-button color="accent" (click)="viewCourseDetails(course.id)">
+              <button mat-button color="primary" (click)="viewCourseDetails(course.id)">
                <p>לרשימת השיעורים</p>
               </button>
 
