--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,63 +1,77 @@
 <div class="center-container">
   <mat-card class="login-card">
     <mat-card-header>
-      <mat-card-title>הרשמה</mat-card-title>
+      <mat-card-title>{{ pageTitle() }}</mat-card-title>
     </mat-card-header>
+
     <mat-card-content>
       <form class="register-form" [formGroup]="registerForm" (ngSubmit)="onSubmitForm()">
         <mat-form-field>
           <mat-label>שם</mat-label>
           <input matInput formControlName="name" placeholder="הכנס את שמך">
-          <mat-error *ngIf="registerForm.get('name')?.touched && registerForm.get('name')?.hasError('required')">
-            שדה השם הוא חובה.
-          </mat-error>
+          @if (registerForm.get('name')?.touched && registerForm.get('name')?.hasError('required')) {
+            <mat-error>
+              שדה השם הוא חובה.
+            </mat-error>
+          }
         </mat-form-field>
 
-        <mat-form-field >
+        <mat-form-field>
           <mat-label>אימייל</mat-label>
           <input matInput type="email" formControlName="email" placeholder="הכנס את האימייל שלך">
-          <mat-error *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.hasError('required')">
-            שדה האימייל הוא חובה.
-          </mat-error>
-          <mat-error *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.hasError('email')">
-            פורמט האימייל אינו תקין.
-          </mat-error>
+          @if (registerForm.get('email')?.touched && registerForm.get('email')?.hasError('required')) {
+            <mat-error>
+              שדה האימייל הוא חובה.
+            </mat-error>
+          }
+          @if (registerForm.get('email')?.touched && registerForm.get('email')?.hasError('email')) {
+            <mat-error>
+              פורמט האימייל אינו תקין.
+            </mat-error>
+          }
         </mat-form-field>
 
-        <mat-form-field >
+        <mat-form-field>
           <mat-label>סיסמה</mat-label>
           <input matInput type="password" formControlName="password" placeholder="הכנס את הסיסמה שלך">
-          <mat-error *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.hasError('required')">
-            שדה הסיסמה הוא חובה.
-          </mat-error>
+          @if (registerForm.get('password')?.touched && registerForm.get('password')?.hasError('required')) {
+            <mat-error>
+              שדה הסיסמה הוא חובה.
+            </mat-error>
+          }
         </mat-form-field>
 
         <mat-form-field>
           <mat-label>תפקיד</mat-label>
           <mat-select formControlName="role" placeholder="בחר תפקיד">
-            <mat-option value="" disabled selected>בחר תפקיד</mat-option> <!-- זהו ה-option ברירת המחדל -->
+            <mat-option value="" disabled selected>בחר תפקיד</mat-option>
             <mat-option value="student">תלמיד</mat-option>
             <mat-option value="teacher">מורה</mat-option>
           </mat-select>
-          
-          <mat-error *ngIf="registerForm.get('role')?.touched && registerForm.get('role')?.hasError('required')">
-            שדה התפקיד הוא חובה.
-          </mat-error>
+          @if (registerForm.get('role')?.touched && registerForm.get('role')?.hasError('required')) {
+            <mat-error>
+              שדה התפקיד הוא חובה.
+            </mat-error>
+          }
         </mat-form-field>
 
-        <a mat-button color="accent" [routerLink]="['/login']" class="switch-form-link" *ngIf="!isEditMode()">כבר יש לך חשבון?</a>
+        @if (!isEditMode()) {
+          <a mat-button color="accent" [routerLink]="['/login']" class="switch-form-link">כבר יש לך חשבון?</a>
+        }
+        
         <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid || isSubmitting()">
-          <ng-container *ngIf="isSubmitting(); else buttonText">
+          @if (isSubmitting()) {
             <span>{{ isEditMode() ? 'שומר שינויים...' : 'נרשם...' }}</span>
-          </ng-container>
-          <ng-template #buttonText>
-            {{ submitButtonText() }} </ng-template>
+          } @else {
+            {{ submitButtonText() }}
+          }
         </button>
 
-        <div *ngIf="errorMessage()" class="overall-error">
-          {{ errorMessage() }}
-        </div>
-
+        @if (errorMessage()) {
+          <div class="overall-error">
+            {{ errorMessage() }}
+          </div>
+        }
       </form>
     </mat-card-content>
   </mat-card>
